--- a/src/components/ControlBar/SceneSelector/SceneSelector.scss
+++ b/src/components/ControlBar/SceneSelector/SceneSelector.scss
@@ -48,6 +48,7 @@
   flex: 1;
   display: flex;
   align-self: center;
+  overflow: hidden;
 }
 
 .h5p-select-handle {
